@@ -212,6 +212,9 @@ if (isLocaleSupported) then
 	L["The magistrate has ordered our retreat."]								= "The magistrate has ordered our retreat."
 	L["The Scourge are incoming."]												= "The Scourge are incoming."
 	L["Everything will be okay."]												= "Everything will be okay."
+	L["We must get to the town hall."]											= "We must get to the town hall."
+	L["Don't be a hero."]														= "Don't be a hero."
+	L["We're all going to go hide in the town hall."]							= "We're all going to go hide in the town hall."
 	L["We will survive this."]													= "We will survive this."
 	L["Get to the town hall."]													= "Get to the town hall."
 	L["The Scourge are coming!"]												= "The Scourge are coming!"
@@ -345,10 +348,6 @@ if (isLocaleSupported) then
 	L["Sika 1"]																	= "We need our Centurions in battle."
 	L["Arios Riftbearer 1"]														= "We need the Collectors for the battle ahead."
 	L["Ben Howell 1"]															= "We must see your final moments."
-	L["Dorin Songblade 1"]														= "We must get to the town hall."
-	L["Karen Taylor 1"]															= "Don't be a hero."
-	L["Sarah Howell 1"]															= "Take the children inside, now!"
-	L["Roger 1"]																= "We're all going to go hide in the town hall."
 	L["Pelodis 1"]																= "Everything is in place for the repair."
 	L["Mikanikos 1"]															= "I will take Phaestus."
 	L["Helpful Steward 1"]														= "Can you help with this problem?"
@@ -427,6 +426,7 @@ if (isLocaleSupported) then
 	L["Xandria 2"]																= "Alexandros feels that Bastion shares his values."
 	L["Kynthia 1"]																= "Could you fly me to the western gate?"
 	L["Kel'Thuzad 1"]															= "<Walk with Kel'Thuzad.>"
+	L["Sarah Howell 1"]															= "Take the children inside, now!"
 	L["Baroness Draka 1"]														= "Begin the attack."
 	L["General Draven 1"]														= "Take me to Kel'Thuzad."
 	L["Prince Renathal 1"]														= "How can I help the assault, Prince Renathal?"
